# co-harmo

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.ja.md  README.md
.github/workflows/: ci.yml
docs/: abc-extension.ja.md  abc-extension.md  agent-workflow.ja.md  agent-workflow.md  m2-manual-test.ja.md  m2-manual-test.md  m4-manual-test.ja.md  m4-manual-test.md
mcp-server/: package-lock.json  package.json
mcp-server/src/: bridgeClient.ts  clipDiff.test.ts  clipDiff.ts  index.ts  summarize.test.ts  summarize.ts
mcp-server/src/codec/: MidiTextCodec.test.ts  MidiTextCodec.ts  abcCodec.test.ts  abcCodec.ts
mcp-server/src/tools/: index.ts
plugin/: CMakeLists.txt
plugin/Resources/web/: index.html
plugin/Resources/web/assets/: index--hHG1lax.js  index-Cv44nN0L.css  index-D63viky0.js  index-DQLWSWlF.css  index-DWpZWu6d.css  index-G8DBNw36.js
plugin/Source/: LocalBridgeServer.cpp  LocalBridgeServer.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SessionState.cpp  SessionState.h
scripts/: build.sh  m2-probe.mjs  m2-smoke.sh  m3-probe.mjs  m3-smoke.sh  m4-probe.mjs  m4-smoke.sh
webui/: index.html  package-lock.json  package.json  vite.config.ts
webui/src/: bridge.ts  index.css  main.tsx
webui/src/components/: App.css  App.tsx
